--- a/src/components/Login/styles.css
+++ b/src/components/Login/styles.css
@@ -4,7 +4,7 @@
   height: 485px;
   position: relative;
   left: 36vw;
-  top: 50px;
+  /* top: 50px; */
 }
 
 .gutter-box {
@@ -21,7 +21,7 @@
   position: absolute;
   width: 200px;
   height: 70px;
-  object-fit: covẻ;
+  object-fit: cover;
 }
 
 .login-content {
