--- a/src/components/Products/styles.css
+++ b/src/components/Products/styles.css
@@ -1,8 +1,43 @@
-.account__info {
-  position: relative;
-  left: 94vw;
-  top: 20px;
+* {
+  margin-top: 0;
 }
+
+.header {
+  position: fixed;
+  position: sticky;
+  z-index: 9999;
+  top: 0;
+}
+
+.header-top {
+  height: 30px;
+  background: linear-gradient(-170deg, #5f6e9c, #5f819e, #67a8a8, #69bdac);
+  text-align: center;
+}
+
+.header-top h3 {
+  color: #fff;
+}
+
+
+.header-main {
+  position: relative;
+  height: 50px;
+  display: flex;
+  background: red;
+}
+
+.header-main .logo h2 {
+  position: absolute;
+  left: 30px;
+  top: 7px;
+  cursor: pointer;
+}
+
+/* .account__info {
+  min-width: 70px;
+  flex-flow: column;
+} */
 
 .account__avatar {
   border: 1px orangered solid;
@@ -14,7 +49,11 @@
 }
 
 .button__login {
-  left: -4vw;
+  position: absolute;
+  background: hsla(0, 0%, 100%, .3);
+  color: #fff;
+  right: 30px;
+  top: 9px;
 }
 
 .products {
@@ -29,4 +68,3 @@
 .products_name {
   margin-left: 5px;
 }
-
