--- a/src/components/ChatRoom/slideImage.css
+++ b/src/components/ChatRoom/slideImage.css
@@ -1,26 +1,33 @@
-.images__admin {
+/* .images__admin {
   margin-left: -30px;
-  
+  position: relative;
+} */
+
+.images__admin {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .images__admin__item {
   position: relative;
+  /* Adjust the margin as needed */
+  /* left: -30px; */
+  /* Remove this line */
 }
 
-.images__admin__item h3 {
-  position: absolute;
+.images__admin_name {
+  /* position: absolute; */
   top: 10px;
   /* left: 10px; */
 }
 
 .images__admin__item .btn_delete {
-  position: absolute;
-  top: 40px;
+  /* position: absolute; */
+  margin-top: 0;
+  margin-bottom: 5px;
   /* left: 80px; */
 }
 
-.images__admin__item img {
-  position: absolute;
-  top: 68px;
-
+.images__admin__item .img {
+  margin-bottom: 10px;
 }
