--- a/src/components/Products/outletProduct.css
+++ b/src/components/Products/outletProduct.css
@@ -33,7 +33,7 @@
   margin-bottom: 30px;
   cursor: pointer;
   position: relative;
-  width: 232px;
+  width: calc((100vw - 15px*4 - 35px*2)/5);
   height: 456px;
   /* border: 1px black solid; */
   box-shadow: 0 1px 2px 0 rgba(48, 50, 53, 0.1), 0 2px 6px 2px rgba(18, 20, 21, 0.15);
@@ -101,92 +101,143 @@
   color: #fff;
 }
 
-.category__main {
-  margin-bottom: 30px;
-  position: relative;
-  top: 40px;
-  left: 30px;
+@media(max-width: 1200px) {
+
+  .link__category {}
+
+  .link__category span {}
+
+  .product {}
+
+  .product_item {
+    width: calc((100vw - 15px*3 - 37px*2)/4);
+    height: 456px;
+    margin-right: 15px;
+  }
+
+  .product_item .image__product {
+    /* width: 240px; */
+
+  }
+
+  .product_item h3 {}
+
+  .product_item .price {}
+
+  .product_item .priceDiscount {}
+
+  .product_item .priceOriginal {}
+
+  .product_item .badge {}
+
+
+  .showProductDetail {}
 }
 
-.allCate--main {
-  display: flex;
-  position: absolute;
-  right: 50px;
+@media(max-width: 992px) {
+
+  .link__category {}
+
+  .link__category span {}
+
+  .product {}
+
+  .product_item {
+    width: calc((100vw - 15px*3 - 32px*2)/3);
+    height: 456px;
+    margin-right: 15px;
+  }
+
+  .product_item .image__product {}
+
+  .product_item h3 {}
+
+  .product_item .price {}
+
+  .product_item .priceDiscount {}
+
+  .product_item .priceOriginal {}
+
+  .product_item .badge {}
+
+
+  .showProductDetail {}
 }
 
-.category__main--item {
-  right: 15px;
-  margin-left: 20px;
-  width: 85px;
-  border: 1px orangered solid;
+@media(max-width: 768px) {
+
+  .link__category {}
+
+  .link__category span {}
+
+  .product {}
+
+  .product_item {
+    width: calc((100vw - 15px*2 - 35px*2)/3);
+    height: 456px;
+    margin-right: 15px;
+  }
+
+  .product_item .image__product {}
+
+  .product_item h3 {}
+
+  .product_item .price {}
+
+  .product_item .priceDiscount {}
+
+  .product_item .priceOriginal {
+    left: 100px;
+  }
+
+  .product_item .badge {}
+
+
+  .showProductDetail {}
 }
 
-.category__main--item:hover {
-  background: orangered;
+@media(max-width: 723px) {
+
+  .link__category {}
+
+  .link__category span {}
+
+  .product {}
+
+  .product_item {
+    width: calc((100vw - 15px - 35px*2)/2);
+    height: 456px;
+    margin-right: 15px;
+  }
+
+  .product_item .image__product {}
+
+  .product_item h3 {}
+
+  .product_item .price {}
+
+  .product_item .priceDiscount {}
+
+  .product_item .priceOriginal {
+    left: 115px;
+  }
+
+  .product_item .badge {}
+
+
+  .showProductDetail {}
 }
 
-.category__main--item:hover span {
-  color: #fff;
-}
+@media(max-width: 522px) {
+  .product_item h3 {
+    left: 3px;
+  }
 
+  .product_item .price {
+    left: 3px;
+  }
 
-.products__main {
-  position: relative;
-  left: 25px;
-}
-
-.products__main--item {
-  margin-bottom: 30px;
-  cursor: pointer;
-  position: relative;
-  width: 232px;
-  height: 456px;
-  /* border: 1px black solid; */
-  box-shadow: 0 1px 2px 0 rgba(48, 50, 53, 0.1), 0 2px 6px 2px rgba(18, 20, 21, 0.15);
-  border-radius: 15px;
-  margin-right: 15px;
-}
-
-.products__main--item .image__product--main {
-  position: absolute;
-  left: 35px;
-  width: 160px;
-  height: 160px;
-  object-fit: cover;
-  top: 30px;
-}
-
-.products__main--item h3 {
-  position: absolute;
-  left: 15px;
-  top: 205px;
-}
-
-.products__main--item .price {
-  position: absolute;
-  top: 280px;
-  left: 15px;
-}
-
-.products__main--item .priceDiscount {
-  color: red;
-}
-
-.products__main--item .priceOriginal {
-  position: absolute;
-  left: 120px;
-  text-decoration: line-through;
-  color: #707070;
-}
-
-.products__main--item .badge {
-  position: absolute;
-  top: 0;
-  /* left: 0; */
-  margin-left: auto;
-  height: 28px;
-  display: flex;
-  align-items: center;
-  border-top-left-radius: 19px;
-  border-bottom-left-radius: 19px;
+  .product_item .priceOriginal {
+    left: 120px;
+  }
 }
